--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NFT Cow Herd</title>
-    <meta name="description" content="Mint your Cow to join the NFT Cow Herd" />
+    <title>Cows With Style</title>
+    <meta name="description" content="Mint your Cow to join the Cows With Style" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
